JayPyGrammarParser.py
# Generated from C:/Javalib/test/JayPyGrammar.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class JayPyGrammarParser ( Parser ):

    grammarFileName = "JayPyGrammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'main'", "'...'", "'**'", "'DOT'", "'&&'", 
                     "'||'", "'OR'", "'AND'", "'boolean'", "'break'", "'byte'", 
                     "'case'", "'char'", "'const'", "'continue'", "'default'", 
                     "'do'", "'print'", "'println'", "'double'", "'else'", 
                     "'float'", "'for'", "'if'", "'goto'", "'import'", "'instanceof'", 
                     "'int'", "'long'", "'return'", "'short'", "'static'", 
                     "'switch'", "'void'", "'while'", "'in'", "'String'", 
                     "'var'", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'null'", "'('", "')'", "'{'", 
                     "'}'", "'['", "']'", "';'", "','", "'.'", "'='", "'>'", 
                     "'<'", "'!'", "'~'", "'?'", "':'", "'=='", "'<='", 
                     "'>='", "'!='", "<INVALID>", "<INVALID>", "'++'", "'--'", 
                     "'+'", "'-'", "'*'", "'/'", "'&'", "'|'", "'^'", "'%'", 
                     "'+='", "'-='", "'*='", "'/='", "'&='", "'|='", "'^='", 
                     "'%='", "'<<='", "'>>='", "'>>>='", "'->'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "BOOLEAN", "BREAK", "BYTE", "CASE", "CHAR", 
                      "CONST", "CONTINUE", "DEFAULT", "DO", "PRINT", "PRINTLN", 
                      "DOUBLE", "ELSE", "FLOAT", "FOR", "IF", "GOTO", "IMPORT", 
                      "INSTANCEOF", "INT", "LONG", "RETURN", "SHORT", "STATIC", 
                      "SWITCH", "VOID", "WHILE", "IN", "STRING", "VAR", 
                      "INT_LITERAL", "DECIMAL_LITERAL_FOR_ARRAY", "DECIMAL_LITERAL", 
                      "HEX_LITERAL", "BINARY_LITERAL", "FLOAT_LITERAL", 
                      "HEX_FLOAT_LITERAL", "BOOL_LITERAL", "CHAR_LITERAL", 
                      "STRING_LITERAL", "NULL_LITERAL", "LPAREN", "RPAREN", 
                      "LBRACE", "RBRACE", "LBRACK", "RBRACK", "SEMI", "COMMA", 
                      "DOT", "ASSIGN", "GT", "LT", "BANG", "TILDE", "QUESTION", 
                      "COLON", "EQUAL", "LE", "GE", "NOTEQUAL", "AND", "OR", 
                      "INC", "DEC", "ADD", "SUB", "MUL", "DIV", "BITAND", 
                      "BITOR", "CARET", "MOD", "ADD_ASSIGN", "SUB_ASSIGN", 
                      "MUL_ASSIGN", "DIV_ASSIGN", "AND_ASSIGN", "OR_ASSIGN", 
                      "XOR_ASSIGN", "MOD_ASSIGN", "LSHIFT_ASSIGN", "RSHIFT_ASSIGN", 
                      "URSHIFT_ASSIGN", "ARROW", "WS", "COMMENT", "LINE_COMMENT", 
                      "IDENTIFIER" ]

    RULE_program = 0
    RULE_memberDeclaration = 1
    RULE_methodDeclaration = 2
    RULE_methodBody = 3
    RULE_typeTypeOrVoid = 4
    RULE_typeTypeOrVar = 5
    RULE_fieldDeclaration = 6
    RULE_variableDeclarators = 7
    RULE_variableDeclarator = 8
    RULE_variableDeclaratorId = 9
    RULE_variableInitializer = 10
    RULE_arrayInitializer = 11
    RULE_qualifiedNameList = 12
    RULE_formalParameters = 13
    RULE_receiverParameter = 14
    RULE_formalParameterList = 15
    RULE_formalParameter = 16
    RULE_lastFormalParameter = 17
    RULE_qualifiedName = 18
    RULE_literal = 19
    RULE_floatLiteral = 20
    RULE_elementValuePairs = 21
    RULE_elementValuePair = 22
    RULE_elementValue = 23
    RULE_elementValueArrayInitializer = 24
    RULE_block = 25
    RULE_blockStatement = 26
    RULE_localVariableDeclaration = 27
    RULE_identifier = 28
    RULE_typeIdentifier = 29
    RULE_printStatement = 30
    RULE_printlnStatement = 31
    RULE_statement = 32
    RULE_switchBlockStatementGroup = 33
    RULE_switchLabel = 34
    RULE_forControl = 35
    RULE_forInit = 36
    RULE_enhancedForControl = 37
    RULE_parExpression = 38
    RULE_expressionList = 39
    RULE_methodCall = 40
    RULE_expression = 41
    RULE_lambdaParameters = 42
    RULE_lambdaExpression = 43
    RULE_lambdaBody = 44
    RULE_lambdaLVTIList = 45
    RULE_lambdaLVTIParameter = 46
    RULE_pattern = 47
    RULE_primary = 48
    RULE_switchExpression = 49
    RULE_switchLabeledRule = 50
    RULE_guardedPattern = 51
    RULE_switchRuleOutcome = 52
    RULE_arrayCreatorRest = 53
    RULE_primitiveType = 54
    RULE_typeArguments = 55
    RULE_arguments = 56
    RULE_typeArgument = 57
    RULE_typeList = 58
    RULE_typeType = 59

    ruleNames =  [ "program", "memberDeclaration", "methodDeclaration", 
                   "methodBody", "typeTypeOrVoid", "typeTypeOrVar", "fieldDeclaration", 
                   "variableDeclarators", "variableDeclarator", "variableDeclaratorId", 
                   "variableInitializer", "arrayInitializer", "qualifiedNameList", 
                   "formalParameters", "receiverParameter", "formalParameterList", 
                   "formalParameter", "lastFormalParameter", "qualifiedName", 
                   "literal", "floatLiteral", "elementValuePairs", "elementValuePair", 
                   "elementValue", "elementValueArrayInitializer", "block", 
                   "blockStatement", "localVariableDeclaration", "identifier", 
                   "typeIdentifier", "printStatement", "printlnStatement", 
                   "statement", "switchBlockStatementGroup", "switchLabel", 
                   "forControl", "forInit", "enhancedForControl", "parExpression", 
                   "expressionList", "methodCall", "expression", "lambdaParameters", 
                   "lambdaExpression", "lambdaBody", "lambdaLVTIList", "lambdaLVTIParameter", 
                   "pattern", "primary", "switchExpression", "switchLabeledRule", 
                   "guardedPattern", "switchRuleOutcome", "arrayCreatorRest", 
                   "primitiveType", "typeArguments", "arguments", "typeArgument", 
                   "typeList", "typeType" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    BOOLEAN=9
    BREAK=10
    BYTE=11
    CASE=12
    CHAR=13
    CONST=14
    CONTINUE=15
    DEFAULT=16
    DO=17
    PRINT=18
    PRINTLN=19
    DOUBLE=20
    ELSE=21
    FLOAT=22
    FOR=23
    IF=24
    GOTO=25
    IMPORT=26
    INSTANCEOF=27
    INT=28
    LONG=29
    RETURN=30
    SHORT=31
    STATIC=32
    SWITCH=33
    VOID=34
    WHILE=35
    IN=36
    STRING=37
    VAR=38
    INT_LITERAL=39
    DECIMAL_LITERAL_FOR_ARRAY=40
    DECIMAL_LITERAL=41
    HEX_LITERAL=42
    BINARY_LITERAL=43
    FLOAT_LITERAL=44
    HEX_FLOAT_LITERAL=45
    BOOL_LITERAL=46
    CHAR_LITERAL=47
    STRING_LITERAL=48
    NULL_LITERAL=49
    LPAREN=50
    RPAREN=51
    LBRACE=52
    RBRACE=53
    LBRACK=54
    RBRACK=55
    SEMI=56
    COMMA=57
    DOT=58
    ASSIGN=59
    GT=60
    LT=61
    BANG=62
    TILDE=63
    QUESTION=64
    COLON=65
    EQUAL=66
    LE=67
    GE=68
    NOTEQUAL=69
    AND=70
    OR=71
    INC=72
    DEC=73
    ADD=74
    SUB=75
    MUL=76
    DIV=77
    BITAND=78
    BITOR=79
    CARET=80
    MOD=81
    ADD_ASSIGN=82
    SUB_ASSIGN=83
    MUL_ASSIGN=84
    DIV_ASSIGN=85
    AND_ASSIGN=86
    OR_ASSIGN=87
    XOR_ASSIGN=88
    MOD_ASSIGN=89
    LSHIFT_ASSIGN=90
    RSHIFT_ASSIGN=91
    URSHIFT_ASSIGN=92
    ARROW=93
    WS=94
    COMMENT=95
    LINE_COMMENT=96
    IDENTIFIER=97

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(JayPyGrammarParser.INT, 0)

        def LPAREN(self):
            return self.getToken(JayPyGrammarParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(JayPyGrammarParser.RPAREN, 0)

        def LBRACE(self):
            return self.getToken(JayPyGrammarParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(JayPyGrammarParser.RBRACE, 0)

        def EOF(self):
            return self.getToken(JayPyGrammarParser.EOF, 0)

        def methodDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JayPyGrammarParser.MethodDeclarationContext)
            else:
                return self.getTypedRuleContext(JayPyGrammarParser.MethodDeclarationContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JayPyGrammarParser.StatementContext)
            else:
                return self.getTypedRuleContext(JayPyGrammarParser.StatementContext,i)


        def getRuleIndex(self):
            return JayPyGrammarParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = JayPyGrammarParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 120
                    self.methodDeclaration() 
                self.state = 125
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 126
            self.match(JayPyGrammarParser.INT)
            self.state = 127
            self.match(JayPyGrammarParser.T__0)
            self.state = 128
            self.match(JayPyGrammarParser.LPAREN)
            self.state = 129
            self.match(JayPyGrammarParser.RPAREN)
            self.state = 130
            self.match(JayPyGrammarParser.LBRACE)
            self.state = 134
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & -4604982369284346368) != 0) or ((((_la - 72)) & ~0x3f) == 0 and ((1 << (_la - 72)) & 33554447) != 0):
                self.state = 131
                self.statement()
                self.state = 136
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 137
            self.match(JayPyGrammarParser.RBRACE)
            self.state = 141
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 157576866304) != 0):
                self.state = 138
                self.methodDeclaration()
                self.state = 143
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 144
            self.match(JayPyGrammarParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MemberDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def methodDeclaration(self):
            return self.getTypedRuleContext(JayPyGrammarParser.MethodDeclarationContext,0)


        def fieldDeclaration(self):
            return self.getTypedRuleContext(JayPyGrammarParser.FieldDeclarationContext,0)


        def getRuleIndex(self):
            return JayPyGrammarParser.RULE_memberDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMemberDeclaration" ):
                listener.enterMemberDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMemberDeclaration" ):
                listener.exitMemberDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMemberDeclaration" ):
                return visitor.visitMemberDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def memberDeclaration(self):

        localctx = JayPyGrammarParser.MemberDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_memberDeclaration)
        try:
            self.state = 148
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 146
                self.methodDeclaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 147
                self.fieldDeclaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeTypeOrVoid(self):
            return self.getTypedRuleContext(JayPyGrammarParser.TypeTypeOrVoidContext,0)


        def identifier(self):
            return self.getTypedRuleContext(JayPyGrammarParser.IdentifierContext,0)


        def formalParameters(self):
            return self.getTypedRuleContext(JayPyGrammarParser.FormalParametersContext,0)


        def methodBody(self):
            return self.getTypedRuleContext(JayPyGrammarParser.MethodBodyContext,0)


        def LBRACK(self, i:int=None):
            if i is None:
                return self.getTokens(JayPyGrammarParser.LBRACK)
            else:
                return self.getToken(JayPyGrammarParser.LBRACK, i)

        def RBRACK(self, i:int=None):
            if i is None:
                return self.getTokens(JayPyGrammarParser.RBRACK)
            else:
                return self.getToken(JayPyGrammarParser.RBRACK, i)

        def VOID(self):
            return self.getToken(JayPyGrammarParser.VOID, 0)

        def LPAREN(self):
            return self.getToken(JayPyGrammarParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(JayPyGrammarParser.RPAREN, 0)

        def getRuleIndex(self):
            return JayPyGrammarParser.RULE_methodDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodDeclaration" ):
                listener.enterMethodDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodDeclaration" ):
                listener.exitMethodDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethodDeclaration" ):
                return visitor.visitMethodDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def methodDeclaration(self):

        localctx = JayPyGrammarParser.MethodDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_methodDeclaration)
        self._la = 0 # Token type
        try:
            self.state = 173
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 150
                self.typeTypeOrVoid()
                self.state = 151
                self.identifier()
                self.state = 152
                self.formalParameters()
                self.state = 157
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==54:
                    self.state = 153
                    self.match(JayPyGrammarParser.LBRACK)
                    self.state = 154
                    self.match(JayPyGrammarParser.RBRACK)
                    self.state = 159
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 160
                self.methodBody()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 162
                self.match(JayPyGrammarParser.VOID)
                self.state = 163
                self.identifier()
                self.state = 164
                self.formalParameters()
                self.state = 165
                self.methodBody()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 167
                self.typeTypeOrVoid()
                self.state = 168
                self.identifier()
                self.state = 169
                self.match(JayPyGrammarParser.LPAREN)
                self.state = 170
                self.match(JayPyGrammarParser.RPAREN)
                self.state = 171
                self.methodBody()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(JayPyGrammarParser.BlockContext,0)


        def SEMI(self):
            return self.getToken(JayPyGrammarParser.SEMI, 0)

        def getRuleIndex(self):
            return JayPyGrammarParser.RULE_methodBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodBody" ):
                listener.enterMethodBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodBody" ):
                listener.exitMethodBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethodBody" ):
                return visitor.visitMethodBody(self)
            else:
                return visitor.visitChildren(self)




    def methodBody(self):

        localctx = JayPyGrammarParser.MethodBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_methodBody)
        try:
            self.state = 177
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [52]:
                self.enterOuterAlt(localctx, 1)
                self.state = 175
                self.block()
                pass
            elif token in [56]:
                self.enterOuterAlt(localctx, 2)
                self.state = 176
                self.match(JayPyGrammarParser.SEMI)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeTypeOrVoidContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeType(self):
            return self.getTypedRuleContext(JayPyGrammarParser.TypeTypeContext,0)


        def VOID(self):
            return self.getToken(JayPyGrammarParser.VOID, 0)

        def getRuleIndex(self):
            return JayPyGrammarParser.RULE_typeTypeOrVoid

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeTypeOrVoid" ):
                listener.enterTypeTypeOrVoid(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeTypeOrVoid" ):
                listener.exitTypeTypeOrVoid(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeTypeOrVoid" ):
                return visitor.visitTypeTypeOrVoid(self)
            else:
                return visitor.visitChildren(self)




    def typeTypeOrVoid(self):

        localctx = JayPyGrammarParser.TypeTypeOrVoidContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_typeTypeOrVoid)
        try:
            self.state = 181
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 179
                self.typeType()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 180
                self.match(JayPyGrammarParser.VOID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeTypeOrVarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeType(self):
            return self.getTypedRuleContext(JayPyGrammarParser.TypeTypeContext,0)


        def VAR(self):
            return self.getToken(JayPyGrammarParser.VAR, 0)

        def getRuleIndex(self):
            return JayPyGrammarParser.RULE_typeTypeOrVar

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeTypeOrVar" ):
